--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # configurações do bd
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/projetoapartamento
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/apartamento
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
